syntax = "proto3";

package wice;
option go_package = "riasc.eu/wice/pkg/pb";

import "common.proto";

message Event {
    enum Type {
        BACKEND_READY = 0;

        PEER_ADDED = 20;
        PEER_REMOVED = 21;
        PEER_MODIFIED = 22;
        PEER_CONNECTION_STATE_CHANGED = 23;

        INTERFACE_ADDED = 30;
        INTERFACE_REMOVED = 31;
    }

    Type type = 1;
    Timestamp time = 2;

    // Public key of peer which triggerd the event
    bytes peer = 3;

    // Interface name which triggered the event
    string interface = 4;

    oneof event {
        BackendReadyEvent backend_ready = 100;

        PeerModifiedEvent peer_modified = 122;
        PeerConnectionStateChangeEvent peer_connection_state_change = 123;
    }
}

message PeerModifiedEvent {
    uint32 modified = 1;   
}

message PeerConnectionStateChangeEvent {
    ConnectionState new_state = 3;
}

message BackendReadyEvent {
    enum Type {
        P2P = 0;
        K8S = 1;
        GRPC = 2;
        INPROCESS = 3;
    }

    Type type = 1;

    string id = 2;
    repeated string listen_addresses = 3;
}
